[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main_screens/NotesMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_screens/images/rect_9patch_button_normal.png" type="Texture" id=2]
[ext_resource path="res://scenes/main_screens/reusable_controls/ButtonNinePatch.tscn" type="PackedScene" id=3]

[node name="NotesMenu" type="Node2D"]
position = Vector2( 180, 120 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -180.0
margin_top = -120.0
margin_right = 180.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 284.0
margin_bottom = 240.0
rect_min_size = Vector2( 72, 48 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer"]
show_behind_parent = true
margin_left = 16.0
margin_top = 16.0
margin_right = 268.0
margin_bottom = 224.0
rect_min_size = Vector2( 108, 72 )
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 3
patch_margin_right = 1
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer/NinePatchRect/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 192.0
focus_neighbour_right = NodePath("../../../../CenterContainer/BackFromNotes")
scroll_horizontal_enabled = false

[node name="TextNotes" type="Label" parent="HBoxContainer/MarginContainer/NinePatchRect/MarginContainer/ScrollContainer"]
margin_right = 220.0
margin_bottom = 235.0
rect_min_size = Vector2( 220, 0 )
text = "Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 288.0
margin_right = 360.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="BackFromNotes" parent="HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 102.0
margin_right = 60.0
margin_bottom = 138.0
focus_neighbour_left = NodePath("../../MarginContainer/NinePatchRect/MarginContainer/ScrollContainer")

[connection signal="gui_input" from="HBoxContainer/MarginContainer/NinePatchRect" to="." method="_on_NinePatchRect_gui_input"]
[connection signal="mouse_got_focus" from="HBoxContainer/CenterContainer/BackFromNotes" to="." method="_on_mouse_got_focus"]
[connection signal="mouse_lost_focus" from="HBoxContainer/CenterContainer/BackFromNotes" to="." method="_on_mouse_lost_focus"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/BackFromNotes" to="." method="_on_BackFromNotes_pressed"]
